--- a/recursos/res.qrc
+++ b/recursos/res.qrc
@@ -16,5 +16,8 @@
 	<file alias="facil">imagenes/facil.ico</file>
 	<file alias="normal">imagenes/captain.ico</file>
 	<file alias="dificil">imagenes/dificil.ico</file>
+	<file alias="pirata">imagenes/pirata.ico</file>
+	<file alias="player">imagenes/barcos-png.jpg</file>
+	<file alias="canonBall">imagenes/cannonBall.png</file>
     </qresource>
 </RCC>
